# idf_sample1

./: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig
component/ps3/src/: Ps3Controller.cpp  Ps3Controller.h  esp32-hal-bt.c  esp32-hal-bt.h
component/ps3/src/include/: ps3_int.h
component/ps3/src/stack/: btm_api.h  l2c_api.h
main/: CMakeLists.txt  main.c
